[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/grocery_item_physics.gd" type="Script" id=2]

[node name="grocery_item_physics" type="RigidBody2D" groups=["grocery_items_physics"]]
script = ExtResource( 2 )

[node name="groc_item_hbox" type="Area2D" parent="."]

[node name="area2d\'s poly" type="CollisionPolygon2D" parent="groc_item_hbox"]
position = Vector2( 1, 0 )
scale = Vector2( 1.21119, 1.15136 )
polygon = PoolVector2Array( -31, -31, -31, 30, 30, 31, 31, -31 )

[node name="grocery_item_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="groc_item_rigib_body_poly" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -31, -31, -31, 30, 30, 31, 31, -31 )

[connection signal="mouse_entered" from="." to="." method="_on_grocery_item_physics_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_grocery_item_physics_mouse_exited"]
[connection signal="area_entered" from="groc_item_hbox" to="." method="_on_groc_item_hbox_area_entered"]
[connection signal="area_exited" from="groc_item_hbox" to="." method="_on_groc_item_hbox_area_exited"]
